--- a/.github/workflows/tf-build.yml
+++ b/.github/workflows/tf-build.yml
@@ -32,7 +32,8 @@ jobs:
         ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID}}
         ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+        ARM_CLIENT_CERTIFICATE_PATH: "./service-principal.pfx"
+        ARM_CLIENT_CERTIFICATE_PASSWORD: ${{ secrets.AZURE_AD_CLIENT_CERT_PWD }}
 
     - name: Terraform Validate
       id: validate
